--- a/packages/debug-contracts/src/styles.css
+++ b/packages/debug-contracts/src/styles.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 
+@theme {
+  --shadow-center: 0 0 12px -2px rgb(0 0 0 / 0.05);
+  --animate-pulse-fast: pulse 1s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
 .skeleton {
   border-radius: 0.2rem;
   background-color: #e5e7eb;
@@ -8,12 +13,7 @@
   }
   will-change: background-position;
   animation: skeleton 1.8s ease-in-out infinite;
-  background-image: linear-gradient(
-    105deg,
-    #0000 0% 40%,
-    #f9fafb 50%,
-    #0000 60% 100%
-  );
+  background-image: linear-gradient(105deg, #0000 0% 40%, #f9fafb 50%, #0000 60% 100%);
   background-size: 200% auto;
   background-repeat: no-repeat;
   background-position-x: -50%;
