--- a/packages/debug-contracts/src/styles.css
+++ b/packages/debug-contracts/src/styles.css
@@ -140,22 +140,23 @@
     @apply bg-accent text-accent-content border-accent;
   }
 
-  .loading.loading-spinner {
-    @apply text-transparent relative;
+  .loading {
+    @apply pointer-events-none inline-block aspect-square bg-current align-middle;
+    mask-size: 100%;
+    mask-repeat: no-repeat;
+    mask-position: center;
+    mask-image: url("data:image/svg+xml,%3Csvg width='24' height='24' stroke='black' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cg transform-origin='center'%3E%3Ccircle cx='12' cy='12' r='9.5' fill='none' stroke-width='3' stroke-linecap='round'%3E%3CanimateTransform attributeName='transform' type='rotate' from='0 12 12' to='360 12 12' dur='2s' repeatCount='indefinite'/%3E%3Canimate attributeName='stroke-dasharray' values='0,150;42,150;42,150' keyTimes='0;0.475;1' dur='1.5s' repeatCount='indefinite'/%3E%3Canimate attributeName='stroke-dashoffset' values='0;-16;-59' keyTimes='0;0.475;1' dur='1.5s' repeatCount='indefinite'/%3E%3C/circle%3E%3C/g%3E%3C/svg%3E");
   }
 
-  .loading.loading-spinner:before {
-    content: "";
-    @apply absolute w-4 h-4 border-2 border-current border-b-transparent rounded-full animate-spin;
-    left: 50%;
-    top: 50%;
-    margin-left: -0.5rem;
-    margin-top: -0.5rem;
+  .loading-spinner {
+    mask-image: url("data:image/svg+xml,%3Csvg width='24' height='24' stroke='black' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cg transform-origin='center'%3E%3Ccircle cx='12' cy='12' r='9.5' fill='none' stroke-width='3' stroke-linecap='round'%3E%3CanimateTransform attributeName='transform' type='rotate' from='0 12 12' to='360 12 12' dur='2s' repeatCount='indefinite'/%3E%3Canimate attributeName='stroke-dasharray' values='0,150;42,150;42,150' keyTimes='0;0.475;1' dur='1.5s' repeatCount='indefinite'/%3E%3Canimate attributeName='stroke-dashoffset' values='0;-16;-59' keyTimes='0;0.475;1' dur='1.5s' repeatCount='indefinite'/%3E%3C/circle%3E%3C/g%3E%3C/svg%3E");
   }
 
-  .loading-xs:before {
-    @apply w-3 h-3;
-    margin-left: -0.375rem;
-    margin-top: -0.375rem;
+  .link {
+    text-underline-offset: 2px;
+  }
+
+  .link:hover {
+    opacity: 80%;
   }
 }
